<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_top_rounded_light"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/todo_header"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/info_todo_popup_title"
                android:textColor="@color/textDark"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/fg_todo_popup_info_title_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/placeholder_title"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/fg_todo_popup_info_title_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder_title" />

            <TextView
                android:id="@+id/fg_todo_popup_info_context_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/placeholder_context"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/fg_todo_popup_info_context_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder_context" />

            <TextView
                android:id="@+id/fg_todo_popup_info_due_date_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/placeholder_due_date"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/fg_todo_popup_info_due_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder_due_date" />

            <TextView
                android:id="@+id/fg_todo_popup_info_label_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/placeholder_label"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/fg_todo_popup_info_label_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/placeholder_label" />

            <TextView
                android:id="@+id/fg_todo_popup_info_done_date_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/placeholder_done_date"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/fg_todo_popup_info_done_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/empty_done_date" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>