<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.auth.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="405dp"
        android:layout_height="366dp"
        android:contentDescription="@string/todo_img"
        app:layout_constraintBottom_toTopOf="@+id/act_register_linearlayout_form_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        app:srcCompat="@drawable/ic_illustration_welcome_banner" />

    <LinearLayout
        android:id="@+id/act_register_linearlayout_form_container"
        android:layout_width="396dp"
        android:layout_height="473dp"
        android:background="@drawable/card_top_rounded_light"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register_button"
            android:textAlignment="center"
            android:textColor="@color/textDark"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/placeholder_email"
            app:boxCornerRadiusBottomEnd="90dp"
            app:boxCornerRadiusBottomStart="90dp"
            app:boxCornerRadiusTopEnd="90dp"
            app:boxCornerRadiusTopStart="90dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="text"
                android:maxLines="1"
                android:id="@+id/act_register_input_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/placeholder_password"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/act_register_input_password" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:hint="@string/placeholder_password_repeat"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="4dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:inputType="textPassword"
                android:maxLines="1"
                android:id="@+id/act_register_input_password_repeat" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/act_register_button_register"
            style="@style/PrimaryButtonColored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_button" />

        <Button
            android:id="@+id/act_register_button_to_login"
            style="@style/PrimaryTextButton"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:autoSizeTextType="none"
            android:text="@string/register_back_to_login" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>