<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_top_rounded_light"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                android:id="@+id/todo_header"
                android:layout_width="251dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/todo_quote"
                android:textColor="@color/textDark"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/placeholder_title"
                app:boxCornerRadiusBottomEnd="90dp"
                app:boxCornerRadiusBottomStart="90dp"
                app:boxCornerRadiusTopEnd="90dp"
                app:boxCornerRadiusTopStart="90dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/placeholder_due_date"
                app:boxCornerRadiusBottomEnd="90dp"
                app:boxCornerRadiusBottomStart="90dp"
                app:boxCornerRadiusTopEnd="90dp"
                app:boxCornerRadiusTopStart="90dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Context-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/placeholder_context"
                app:boxCornerRadiusBottomEnd="90dp"
                app:boxCornerRadiusBottomStart="90dp"
                app:boxCornerRadiusTopEnd="90dp"
                app:boxCornerRadiusTopStart="90dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/todo_context"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:maxLines="6" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/placeholder_label"
                app:boxCornerRadiusBottomEnd="90dp"
                app:boxCornerRadiusBottomStart="90dp"
                app:boxCornerRadiusTopEnd="90dp"
                app:boxCornerRadiusTopStart="90dp"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/todo_set_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:maxLines="6" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>